--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
-
-/* Optional global colors if needed for custom classes */
+/* Optional global colors if needed for custom #10B982 classes */
+/*  */
 :root {
   --color-primary: #10b982;
   --color-background: #ffffff;
@@ -10,11 +10,29 @@
 body {
   background-color: var(--color-background);
   color: var(--color-text);
-  font-family: "Inter", sans-serif;
+  font-family: "Raleway", sans-serif;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+
+.appbar {
+  background-color: var(--color-background);
+  font-family: "Raleway";
   font-weight: 600;
   font-size: 14px;
   line-height: 100%;
   letter-spacing: 0%;
+  color: #000000;
+}
+
+.user {
+  font-family: "Raleway";
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #000000;
 }
 
 .border {
@@ -39,19 +57,22 @@ body {
 }
 
 .headline {
+  font-family: "Raleway";
   font-weight: 500;
   font-style: Medium;
   font-size: 18px;
   line-height: 100%;
+  letter-spacing: 0%;
   color: #505050;
 }
 
 .footer {
+  font-family: "Raleway";
   font-weight: 700;
   font-style: Bold;
   font-size: 32px;
-  letter-spacing: 0%;
   line-height: 100%;
+  letter-spacing: 0%;
   color: #000000;
 }
 
@@ -64,6 +85,9 @@ body {
   color: #505050;
 }
 
+.primary-text {
+  color: var(--color-primary);
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
@@ -77,4 +101,10 @@ body {
 /* Hide scrollbar for Firefox */
 .hide-scrollbar {
   scrollbar-width: none;
+}
+
+/* Icons styling */
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 20;
 }
